fixed responsiveness bugs on small screens

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -164,10 +164,19 @@ body {
 			width: 48px;
 			height: auto;
 			cursor: pointer;
+
+			@media screen and (max-width: 600px) {
+				width: 32px;
+				top: 10px;
+				right: 10px;
+			}
 		}
 
 		h1 {
 			color: #bd6565;
+			@media screen and (max-width: 600px) {
+				font-size: 1.5rem;
+			}
 		}
 
 		.grid {
@@ -188,6 +197,9 @@ body {
 				@media screen and (max-width: 900px) {
 					font-size: 1.25rem;
 				}
+				@media screen and (max-width: 600px) {
+					font-size: 1rem;
+				}
 			}
 
 			.info {
@@ -195,6 +207,10 @@ body {
 				padding: 2rem;
 				border-radius: 20px;
 				box-shadow: #000000 0 5px 10px 0px;
+
+				@media screen and (max-width: 500px) {
+					padding: 1rem;
+				}
 
 				.wrap {
 					display: flex;
